I was fixing bugs but ended up redoing the event creation process. Also cropping.

--- a/client/main.css
+++ b/client/main.css
@@ -64,7 +64,12 @@ button, input[type="submit"], .custom-file-upload {
   font-size: 16px;
 }
 
-button:hover, input[type="submit"]:hover {
+button.inactive, input[type="submit"].inactive {
+  border: solid 2px #666;
+  color: #666;
+}
+
+button:not(.inactive):hover, input[type="submit"]:not(.inactive):hover {
   cursor: pointer;
 }
 
@@ -73,8 +78,13 @@ input[type='text'], input[type="password"], input {
   border: none;
   background: #222;
   margin: 20px 10px;
+  margin-left: 0;
   font-size: 16px;
   outline: none;
+}
+
+input[type="checkbox"] {
+  margin-left: 10px;
 }
 
 input[attribute='value'] {
@@ -84,6 +94,11 @@ input[attribute='value'] {
 input[type="file"] {
     display: none;
 }
+
+label {
+  margin-right: 10px;
+}
+
 .custom-file-upload {
     border: 1px solid #ccc;
     display: inline-block;
@@ -206,6 +221,7 @@ textarea {
   color: white;
   border: none;
   margin: 10px;
+  margin-left: 0;
   padding: 10px;
   height: 100px;
 }
@@ -254,4 +270,6 @@ textarea:focus {
 .accordion-content {
   padding: 20px;
   background-color: #444;
+  width: 420px;
+  box-sizing: border-box;
 }
